# CCP_2YEAR_MUSEUM

./: .env  .env.example  .gitignore  package-lock.json  pyproject.toml
backend/: .env  app.py  chatbot.py  final.py  main.py  museumshowcase.py  payment.py  schemas.py  temp.js  temp.py  tester.py
backend/database/: .env  database.py  datasetcreator.py  models.py
frontend/: orginalApp.css  package-lock.json  package.json
frontend/src/: App.css
frontend/src/Pages/Chatbot/: FailedPage.jsx  MuseumShowcase.css  MuseumShowcase.jsx  PaymentNew.css  PaymentNew.jsx  SuccessPage.jsx
museum_project1/: package-lock.json  package.json
museum_project1/src/: App.css  App.jsx
museum_project1/src/Pages/Chatbot/: Chatbot.jsx  Chatbox.css  MuseumShowcase.css  MuseumShowcase.jsx  Navbar.css  Navbar.jsx  PaymentNew.css  PaymentNew.jsx  SuccessPage.jsx  payment.jsx  success.css
