[project]
name = "ccp-2year-museum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "pydantic-ai>=0.2.4",
    "pydantic[email]>=2.11.4",
    "qrcode>=8.2",
    "dotenv>=0.9.9",
    "razorpay>=1.4.2",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "psycopg2-binary>=2.9.10",
]
